--- a/team.html
+++ b/team.html
@@ -8,7 +8,7 @@
 
     <body id="body-color">
         <header id="main-header">
-            <img id="logo" src="" width="150" width="150">
+            <img id="logo" src="screenshot/logo.jpg" width="150" width="150">
             <h1>Styling Trends of Elegance</h1>
             <nav id="main-nav">
                 <div id="nav-toggle">
@@ -17,11 +17,11 @@
                     <div></div>
                 </div>
                 <ul id="main-nav-items">
-                    <li><a href="../projects/final/home/index.html">What is Styling Trends of Elegance?</a></li>
-                    <li><a href="../projects/final/home/avon.html">What is AVON?</a></li>
-                    <li><a href="../projects/final/home/rep.html">Meet Our Representatives!</a></li>
-                    <li><a href="../projects/final/home/signup.html">Join Our Team!</a></li>
-                    <li><a href="../projects/final/home/men.html">Products for Men!</a></li>
+                    <li><a href="uploads/index.html">What is Styling Trends of Elegance?</a></li>
+                    <li><a href="uploads/avon.html">What is AVON?</a></li>
+                    <li><a href="uploads/rep.html">Meet Our Representatives!</a></li>
+                    <li><a href="uploads/signup.html">Join Our Team!</a></li>
+                    <li><a href="uploads/men.html">Products for Men!</a></li>
                     <li><a href= "#">Build-a-Team!</a></li>
                 </ul>
             </nav>
