--- a/uploads/index.html
+++ b/uploads/index.html
@@ -22,7 +22,7 @@
                     <li><a href="rep.html">Meet Our Representatives!</a></li>
                     <li><a href="signup.html">Join Our Team!</a></li>
                     <li><a href="men.html">Products for Men!</a></li>
-                    <li><a href="team.html">Team</a></li>
+                    <li><a href="team.html">Build-a-Team!</a></li>
                 </ul>
             </nav>
         </header>
