--- a/uploads/men.html
+++ b/uploads/men.html
@@ -22,7 +22,7 @@
                     <li><a href="rep.html">Meet Our Representatives!</a></li>
                     <li><a href="signup.html">Join Our Team!</a></li>
                     <li><a href="men.html">Products for Men!</a></li>
-                    <li><a href="../../../projects/part5/home/items.html">Items</a></li>
+                    <li><a href="team.html">Build-a-Team!</a></li>
                 </ul>
             </nav>
         </header>
