--- a/team.html
+++ b/team.html
@@ -22,7 +22,7 @@
                     <li><a href="uploads/rep.html">Meet Our Representatives!</a></li>
                     <li><a href="uploads/signup.html">Join Our Team!</a></li>
                     <li><a href="uploads/men.html">Products for Men!</a></li>
-                    <li><a href= "upload/team.html">Build-a-Team!</a></li>
+                    <li><a href= "#">Build-a-Team!</a></li>
                 </ul>
             </nav>
         </header>
