--- a/uploads/signup.html
+++ b/uploads/signup.html
@@ -21,7 +21,7 @@
                     <li><a href="rep.html">Meet Our Representatives!</a></li>
                     <li><a href="signup.html">Join Our Team!</a></li>
                     <li><a href="men.html">Products for Men!</a></li>
-                    <li><a href="team.html">Build-a-Team!</a></li>
+                    <li><a href="http://localhost:5000/">Build-a-Team!</a></li>
                 </ul>
             </nav>
         </header>
