--- a/team.html
+++ b/team.html
@@ -8,7 +8,8 @@
 
     <body id="body-color">
         <header id="main-header">
-            <img id="logo" src="screenshot/logo.jpg" width="150" width="150">
+            <!--<img id="logo" src="public/images/logo.jpg" width="150" width="150">-->
+
             <h1>Styling Trends of Elegance</h1>
             <nav id="main-nav">
                 <div id="nav-toggle">
@@ -28,7 +29,7 @@
         </header>
 
         <main>
-        <h2>Build-a-Team</h2>
+        <h1 id ="team">Build-a-Team</h2>
         <a href="#" id="add-link">+</a>
         <div class="columns two columns">
             <div id ="member-list" class="columns"></div>
@@ -70,6 +71,14 @@
                     <button type="submit">Submit</button>
                 </p>
             </form>
+        </div>
+        
+        <div id="footer">
+            <footer id ="main-footer">
+                <p><strong> &copy; Styling Trends of Elegance, LLC</strong></p>
+                <p><strong> 111 Trade Road, Cheraw, SC, 29520</strong></p>
+                <p><strong> Contact Us at: (843) 537-6536 or (843) 910-4631</strong></p>
+            </footer>
         </div>
     </main>
     </body>
