--- a/team.html
+++ b/team.html
@@ -8,7 +8,7 @@
 
     <body id="body-color">
         <header id="main-header">
-            <!--<img id="logo" src="public/images/logo.jpg" width="150" width="150">-->
+            <img id="logo" src="uploads/screenshot/logo.jpg" height="150" width="150">
 
             <h1>Styling Trends of Elegance</h1>
             <nav id="main-nav">
@@ -72,7 +72,7 @@
                 </p>
             </form>
         </div>
-        
+
         <div id="footer">
             <footer id ="main-footer">
                 <p><strong> &copy; Styling Trends of Elegance, LLC</strong></p>
